init main entry point

--- a/payment-service/template/invoice.html
+++ b/payment-service/template/invoice.html
@@ -194,7 +194,7 @@
       <div class="mb-5">
         <center>
           <div>
-            <b style="font-size: 25px">Nanuraga Mini Soccer</b>
+            <b style="font-size: 25px">Star Mini Soccer</b>
             <p>Jl. Tulip, Rw. Panjang, Kecamatan Bojonggede, Kabupaten Bogor, Jawa Barat 16920</p>
             <p>Telp. +62 851-5534-4998</p>
           </div>
